--- a/admin/userlist.html
+++ b/admin/userlist.html
@@ -5,30 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="ThemeBucket">
-    <link rel="shortcut icon" href="images/favicon.png">
+    <link rel="shortcut icon" href="../images/favicon.png">
     <title>后台管理系统</title>
     <!--Core CSS -->
-    <link href="bs3/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/bootstrap-reset.css" rel="stylesheet">
-    <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <link href="../bs3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap-reset.css" rel="stylesheet">
+    <link href="../assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
 
     <!-- <link rel="stylesheet" href="assets/bootstrap-switch-master/build/css/bootstrap3/bootstrap-switch.css" /> -->
-    <link href="assets/iCheck-master/skins/minimal/blue.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap-fileupload/bootstrap-fileupload.css" />
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap-wysihtml5/bootstrap-wysihtml5.css" />
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap-datepicker/css/datepicker.css" />
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap-timepicker/compiled/timepicker.css" />
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap-colorpicker/css/colorpicker.css" />
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap-daterangepicker/daterangepicker-bs3.css" />
-    <link rel="stylesheet" type="text/css" href="assets/bootstrap-datetimepicker/css/datetimepicker.css" />
-    <link rel="stylesheet" type="text/css" href="assets/jquery-multi-select/css/multi-select.css" />
-    <link rel="stylesheet" type="text/css" href="assets/jquery-tags-input/jquery.tagsinput.css" />
+    <link href="../assets/iCheck-master/skins/minimal/blue.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../assets/bootstrap-fileupload/bootstrap-fileupload.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/bootstrap-wysihtml5/bootstrap-wysihtml5.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/bootstrap-datepicker/css/datepicker.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/bootstrap-timepicker/compiled/timepicker.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/bootstrap-colorpicker/css/colorpicker.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/bootstrap-daterangepicker/daterangepicker-bs3.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/bootstrap-datetimepicker/css/datetimepicker.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/jquery-multi-select/css/multi-select.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/jquery-tags-input/jquery.tagsinput.css" />
 
-    <link rel="stylesheet" type="text/css" href="assets/select2-master/select2.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/select2-master/select2.css" />
 
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/style-responsive.css" rel="stylesheet" />
+    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/style-responsive.css" rel="stylesheet" />
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="js/ie8/ie8-responsive-file-warning.js"></script><![endif]-->
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -815,57 +815,57 @@
     </div><!-- /.modal-dialog -->
 </div>
 <!--Core js-->
-<script src="js/lib/jquery.js"></script>
-<script src="js/lib/jquery-1.8.3.min.js"></script>
-<script src="bs3/js/bootstrap.min.js"></script>
-<script src="js/lib/jquery-ui-1.9.2.custom.min.js"></script>
-<script class="include" type="text/javascript" src="js/accordion-menu/jquery.dcjqaccordion.2.7.js"></script>
-<script src="js/scrollTo/jquery.scrollTo.min.js"></script>
-<script src="assets/easypiechart/jquery.easypiechart.js"></script>
-<script src="assets/jQuery-slimScroll-1.3.0/jquery.slimscroll.js"></script>
-<script src="js/nicescroll/jquery.nicescroll.js"></script>
-<script src="js/nicescroll/jquery.nicescroll.js"></script>
+<script src="../js/lib/jquery.js"></script>
+<script src="../js/lib/jquery-1.8.3.min.js"></script>
+<script src="../bs3/js/bootstrap.min.js"></script>
+<script src="../js/lib/jquery-ui-1.9.2.custom.min.js"></script>
+<script class="include" type="text/javascript" src="../js/accordion-menu/jquery.dcjqaccordion.2.7.js"></script>
+<script src="../js/scrollTo/jquery.scrollTo.min.js"></script>
+<script src="../assets/easypiechart/jquery.easypiechart.js"></script>
+<script src="../assets/jQuery-slimScroll-1.3.0/jquery.slimscroll.js"></script>
+<script src="../js/nicescroll/jquery.nicescroll.js"></script>
+<script src="../js/nicescroll/jquery.nicescroll.js"></script>
 
-<script src="assets/bootstrap-switch-master/build/js/bootstrap-switch.js"></script>
+<script src="../assets/bootstrap-switch-master/build/js/bootstrap-switch.js"></script>
 
-<script type="text/javascript" src="assets/fuelux/js/spinner.min.js"></script>
-<script type="text/javascript" src="assets/bootstrap-fileupload/bootstrap-fileupload.js"></script>
-<script type="text/javascript" src="assets/bootstrap-wysihtml5/wysihtml5-0.3.0.js"></script>
-<script type="text/javascript" src="assets/bootstrap-wysihtml5/bootstrap-wysihtml5.js"></script>
-<script type="text/javascript" src="assets/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
-<script type="text/javascript" src="assets/bootstrap-datetimepicker/js/bootstrap-datetimepicker.js"></script>
-<script type="text/javascript" src="assets/bootstrap-daterangepicker/moment.min.js"></script>
-<script type="text/javascript" src="assets/bootstrap-daterangepicker/daterangepicker.js"></script>
-<script type="text/javascript" src="assets/bootstrap-colorpicker/js/bootstrap-colorpicker.js"></script>
-<script type="text/javascript" src="assets/bootstrap-timepicker/js/bootstrap-timepicker.js"></script>
-<script type="text/javascript" src="assets/jquery-multi-select/js/jquery.multi-select.js"></script>
-<script type="text/javascript" src="assets/jquery-multi-select/js/jquery.quicksearch.js"></script>
+<script type="text/javascript" src="../assets/fuelux/js/spinner.min.js"></script>
+<script type="text/javascript" src="../assets/bootstrap-fileupload/bootstrap-fileupload.js"></script>
+<script type="text/javascript" src="../assets/bootstrap-wysihtml5/wysihtml5-0.3.0.js"></script>
+<script type="text/javascript" src="../assets/bootstrap-wysihtml5/bootstrap-wysihtml5.js"></script>
+<script type="text/javascript" src="../assets/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
+<script type="text/javascript" src="../assets/bootstrap-datetimepicker/js/bootstrap-datetimepicker.js"></script>
+<script type="text/javascript" src="../assets/bootstrap-daterangepicker/moment.min.js"></script>
+<script type="text/javascript" src="../assets/bootstrap-daterangepicker/daterangepicker.js"></script>
+<script type="text/javascript" src="../assets/bootstrap-colorpicker/js/bootstrap-colorpicker.js"></script>
+<script type="text/javascript" src="../assets/bootstrap-timepicker/js/bootstrap-timepicker.js"></script>
+<script type="text/javascript" src="../assets/jquery-multi-select/js/jquery.multi-select.js"></script>
+<script type="text/javascript" src="../assets/jquery-multi-select/js/jquery.quicksearch.js"></script>
 
-<script type="text/javascript" src="assets/bootstrap-inputmask/bootstrap-inputmask.min.js"></script>
+<script type="text/javascript" src="../assets/bootstrap-inputmask/bootstrap-inputmask.min.js"></script>
 
-<script src="assets/jquery-tags-input/jquery.tagsinput.js"></script>
+<script src="../assets/jquery-tags-input/jquery.tagsinput.js"></script>
 
-<script src="assets/select2-master/select2.js"></script>
-<script src="js/select2/select-init.js"></script>
+<script src="../assets/select2-master/select2.js"></script>
+<script src="../js/select2/select-init.js"></script>
 <!--common script init for all pages-->
-<script src="js/scripts.js"></script>
-<script src="js/jquery.twbsPagination.js"></script>
+<script src="../js/scripts.js"></script>
+<script src="../js/jquery.twbsPagination.js"></script>
 <!-- <script src="js/toggle-button/toggle-init.js"></script> -->
 
-<script src="js/advanced-form/advanced-form.js"></script>
+<script src="../js/advanced-form/advanced-form.js"></script>
 <!--Easy Pie Chart-->
-<script src="assets/easypiechart/jquery.easypiechart.js"></script>
+<script src="../assets/easypiechart/jquery.easypiechart.js"></script>
 <!--Sparkline Chart-->
-<script src="assets/sparkline/jquery.sparkline.js"></script>
+<script src="../assets/sparkline/jquery.sparkline.js"></script>
 <!--jQuery Flot Chart-->
-<script src="assets/flot-chart/jquery.flot.js"></script>
-<script src="assets/flot-chart/jquery.flot.tooltip.min.js"></script>
-<script src="assets/flot-chart/jquery.flot.resize.js"></script>
-<script src="assets/flot-chart/jquery.flot.pie.resize.js"></script>
-<script type="text/javascript" src="assets/ckeditor/ckeditor.js"></script>
+<script src="../assets/flot-chart/jquery.flot.js"></script>
+<script src="../assets/flot-chart/jquery.flot.tooltip.min.js"></script>
+<script src="../assets/flot-chart/jquery.flot.resize.js"></script>
+<script src="../assets/flot-chart/jquery.flot.pie.resize.js"></script>
+<script type="text/javascript" src="../assets/ckeditor/ckeditor.js"></script>
 <!--icheck init -->
-<script src="js/icheck/icheck-init.js"></script>
-<script src="assets/iCheck-master/jquery.icheck.js"></script>
+<script src="../js/icheck/icheck-init.js"></script>
+<script src="../assets/iCheck-master/jquery.icheck.js"></script>
 <!--script for this page-->
 <script type="text/javascript">
     $(function () {
