--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                             </a>
                         </li>
                         <li class="sub-menu">
-                            <a class="apl40" href="javascript:;">
+                            <a class="apl40" href="./contentmanage/setbanner.html">
                                 <i class="fa fa-picture-o"></i>
                                 <span>首页banner配置</span>
                             </a>
@@ -253,7 +253,7 @@
                             </a>
                             <ul class="sub">
                                 <li><a class="alast" href="">前台用户</a></li>
-                                <li><a class="alast" href="admin/userlist.html">后台用户</a></li>
+                                <li><a class="alast" href="./admin/userlist.html">后台用户</a></li>
                             </ul>
                         </li>
                         <li>
@@ -269,7 +269,7 @@
                             </a>
                         </li>
                         <li class="sub-menu">
-                            <a class="apl40" href="javascript:;">
+                            <a class="apl40" href="./admin/operation_log.html">
                                 <i class="fa fa-stack-exchange"></i>
                                 <span>操作日志</span>
                             </a>
@@ -374,25 +374,80 @@
                 <li>
                     <a class="firstmenu" href="javascript:;">
                         <i class="fa fa-ticket"></i>
-                        <span>VIP管理</span>
+                        <span>内容管理</span>
                     </a>
                     <ul>
                         <li class="sub-menu">
-                            <a class="apl40" href="javascript:;">
+                            <a class="apl40" href="./dataStatistics/platform_data.html">
                                 <i class="fa fa-align-justify"></i>
-                                <span>VIP用户列表</span>
+                                <span>文章发布</span>
                             </a>
                         </li>
                         <li>
-                            <a class="apl40" href="javascript:;">
+                            <a class="apl40" href="./dataStatistics/user_statistics.html">
                                 <i class="fa fa-sort-numeric-asc"></i>
-                                <span>VIP等级配置</span>
+                                <span>banner管理</span>
                             </a>
                         </li>
                         <li class="sub-menu">
-                            <a class="apl40" href="javascript:;">
+                            <a class="apl40" href="./dataStatistics/funds_statistics.html">
                                 <i class="fa fa-gift"></i>
-                                <span>VIP礼包管理</span>
+                                <span>合同管理</span>
+                            </a>
+                            <ul class="sub">
+                                <li><a class="alast" href="">合同发布</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a class="firstmenu" href="javascript:;">
+                        <i class="fa fa-ticket"></i>
+                        <span>数据统计</span>
+                    </a>
+                    <ul>
+                        <li class="sub-menu">
+                            <a class="apl40" href="./dataStatistics/platform_data.html">
+                                <i class="fa fa-align-justify"></i>
+                                <span>平台存量数据</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="apl40" href="./dataStatistics/user_statistics.html">
+                                <i class="fa fa-sort-numeric-asc"></i>
+                                <span>用户统计</span>
+                            </a>
+                        </li>
+                        <li class="sub-menu">
+                            <a class="apl40" href="./dataStatistics/funds_statistics.html">
+                                <i class="fa fa-gift"></i>
+                                <span>资金统计</span>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a class="firstmenu" href="javascript:;">
+                        <i class="fa fa-ticket"></i>
+                        <span>系统管理</span>
+                    </a>
+                    <ul>
+                        <li class="sub-menu">
+                            <a class="apl40" href="./system/attribute_management.html">
+                                <i class="fa fa-align-justify"></i>
+                                <span>属性管理</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="apl40" href="./system/system_parameter.html">
+                                <i class="fa fa-sort-numeric-asc"></i>
+                                <span>系统参数设置</span>
+                            </a>
+                        </li>
+                        <li class="sub-menu">
+                            <a class="apl40" href="./system/operation_log.html">
+                                <i class="fa fa-gift"></i>
+                                <span>操作日志</span>
                             </a>
                         </li>
                     </ul>
